--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22317,5 +22317,51 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.navbar {
+  background-color: rgba(33, 37, 41, 0.5) !important;
+}
+.navbar .navbar-brand, .navbar .navbarText a, .navbar .navbarText1 {
+  opacity: 1 !important;
+  color: #ffffff !important;
+}
+
+header {
+  position: relative;
+  height: 120vh;
+  background-image: url(../assets/img/hero-bg.jpg);
+  background-attachment: fixed;
+  margin-top: -3%;
+}
+header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.356);
+  z-index: 0;
+}
+header .secHeader {
+  padding-top: 20%;
+  display: flex;
+  justify-content: space-around;
+}
+header .secHeader #divHeader {
+  display: flex;
+  flex-direction: column;
+  width: 59%;
+  align-items: center;
+  position: relative;
+}
+header .secHeader #divHeader #pHeader {
+  color: white;
+}
+header .secHeader #divHeader #p1Header {
+  color: white;
+}
+header .secHeader #div2Header {
+  width: 40%;
+}
 
 /*# sourceMappingURL=style.css.map */
