--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -1,1 +1,42 @@
 @use './_mixins' as *
+
+.navbar
+  background-color: rgba(33, 37, 41, 0.5) !important
+  
+  // Reset l'opacité pour tous les éléments enfants
+  .navbar-brand, .navbarText a, .navbarText1
+    opacity: 1 !important
+    color: #ffffff !important
+
+header
+  position: relative
+  height: 120vh
+  background-image: url(../assets/img/hero-bg.jpg)
+  background-attachment: fixed
+  margin-top: -3%
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.356)
+    z-index: 0
+  .secHeader
+    padding-top: 20%
+    display: flex
+    justify-content: space-around
+    #divHeader
+      display: flex
+      flex-direction: column
+      width: 59%
+      align-items: center
+      position: relative
+      #pHeader
+        color: white
+      #p1Header
+        color: white
+    #div2Header
+      width: 40%
+        
