--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22317,20 +22317,40 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  margin-top: 0;
+}
+
 .navbar {
   background-color: rgba(33, 37, 41, 0.5) !important;
 }
 .navbar .navbar-brand, .navbar .navbarText a, .navbar .navbarText1 {
   opacity: 1 !important;
   color: #ffffff !important;
+  text-decoration: none;
+}
+.navbar .navbarText {
+  display: inline-flex;
+  gap: 35%;
+  margin-left: -35%;
+}
+.navbar .navbarText1 {
+  border-radius: 50px;
+  padding: 8px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: none;
+  border: 1px orange solid;
+}
+.navbar .navbar-brand {
+  font-size: 30px;
 }
 
 header {
   position: relative;
-  height: 120vh;
+  height: 1400px;
   background-image: url(../assets/img/hero-bg.jpg);
   background-attachment: fixed;
-  margin-top: -3%;
 }
 header::before {
   content: "";
@@ -22345,23 +22365,57 @@ header::before {
 header .secHeader {
   padding-top: 20%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  width: 100%;
 }
 header .secHeader #divHeader {
   display: flex;
   flex-direction: column;
-  width: 59%;
-  align-items: center;
+  width: 50%;
   position: relative;
+  margin-left: -25%;
 }
 header .secHeader #divHeader #pHeader {
   color: white;
+  font-size: 70px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+header .secHeader #divHeader #pHeader #spanHeader {
+  color: rgb(205, 164, 93);
 }
 header .secHeader #divHeader #p1Header {
   color: white;
+  align-self: flex-start;
+  font-size: 22px;
+  letter-spacing: 0.5px;
+  margin-top: 0;
+}
+header .secHeader #divHeader #span1Header {
+  display: flex;
+  gap: 3%;
+}
+header .secHeader #divHeader #btnHeader {
+  border-radius: 50px;
+  padding: 8px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: none;
+  border: 1px orange solid;
+  color: white;
 }
 header .secHeader #div2Header {
-  width: 40%;
+  padding-top: 5%;
+}
+header .secHeader #div2Header .fa-solid {
+  margin-top: 10%;
+  color: white;
+  position: relative;
+  background-color: rgb(204, 163, 94);
+  border-radius: 50%;
+  padding: 35px;
+  font-size: 30px;
+  box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336);
 }
 
 /*# sourceMappingURL=style.css.map */
