--- a/src/sass/partials/_mixins.sass
+++ b/src/sass/partials/_mixins.sass
@@ -2,3 +2,12 @@
     display: flex
     align-items: center
     justify-content: center
+
+
+@mixin boutonheader
+    border-radius: 50px
+    padding: 8px
+    padding-left: 25px
+    padding-right: 25px
+    background: none
+    border: 1px orange solid
