--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -1,5 +1,6 @@
 @use './_mixins' as *
-
+body
+    margin-top: 0
 .navbar
   background-color: rgba(33, 37, 41, 0.5) !important
   
@@ -7,13 +8,20 @@
   .navbar-brand, .navbarText a, .navbarText1
     opacity: 1 !important
     color: #ffffff !important
-
+    text-decoration: none
+  .navbarText
+    display: inline-flex
+    gap: 35%
+    margin-left: -35%
+  .navbarText1
+    @include boutonheader
+  .navbar-brand
+    font-size: 30px
 header
   position: relative
-  height: 120vh
+  height: 1400px
   background-image: url(../assets/img/hero-bg.jpg)
   background-attachment: fixed
-  margin-top: -3%
   &::before
     content: ''
     position: absolute
@@ -26,17 +34,50 @@ header
   .secHeader
     padding-top: 20%
     display: flex
-    justify-content: space-around
+    justify-content: center
+    width: 100%
     #divHeader
       display: flex
       flex-direction: column
-      width: 59%
-      align-items: center
+      width: 50%
       position: relative
+      margin-left: -25%
       #pHeader
         color: white
+        font-size: 70px
+        font-weight: bold
+        margin-bottom: 0
+        #spanHeader
+            color: rgb(205, 164, 93)
       #p1Header
         color: white
+        align-self: flex-start
+        font-size: 22px
+        letter-spacing: 0.5px
+        margin-top: 0
+      #span1Header
+        display: flex
+        gap: 3%
+      #btnHeader
+        @include boutonheader
+        color: white
     #div2Header
-      width: 40%
+        padding-top: 5%
+        .fa-solid
+          margin-top: 10%
+          color: white
+          position: relative
+          background-color: rgb(204, 163, 94)
+          border-radius: 50%
+          padding: 35px
+          font-size: 30px
+          box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336)
+          
+
+        
+
+      
+        
+
+        
         
