--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22419,4 +22419,21 @@ header .secHeader #div2Header .fa-solid {
   box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336);
 }
 
+.section1 {
+  position: relative;
+  height: 900px;
+  background-image: url(../assets/img/about-bg.jpg);
+  background-attachment: fixed;
+}
+.section1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.356);
+  z-index: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
