--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -75,6 +75,21 @@ header
           box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336)
           
 
+
+.section1
+  position: relative
+  height: 900px
+  background-image: url(../assets/img/about-bg.jpg)
+  background-attachment: fixed
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.356)
+    z-index: 0
         
 
       
