--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -90,6 +90,49 @@ header
     height: 100%
     background-color: rgba(0, 0, 0, 0.356)
     z-index: 0
+  .GrandeDiv1
+    @include flex
+    z-index: 1
+    position: relative
+    .section1Text
+      width: 50%
+      height: 900px  
+      @include flex
+      flex-direction: column
+      padding-left: 12.5%
+      padding-right: 12.5%
+      h3
+        color: white  
+      p
+        color: white
+      #pItalicsec1
+        font-style: italic
+      #p1sec1
+        margin-left: -40px
+        .fa-check
+          color: rgb(229, 184, 105)
+          border: solid 1px rgb(229, 184, 105) 
+          border-radius: 50% 
+          font-size: 14px
+          padding: 5px 
+      #p2sec1
+        margin-left: -57px
+        .fa-check
+          color: rgb(229, 184, 105)
+          border: solid 1px rgb(229, 184, 105) 
+          border-radius: 50% 
+          font-size: 14px
+          padding: 5px 
+      #p3sec1
+        .fa-check
+          color: rgb(229, 184, 105)
+          border: solid 1px rgb(229, 184, 105) 
+          border-radius: 50% 
+          font-size: 14px
+          padding: 5px    
+    .section1Img
+      width: 50%
+      height: 900px
         
 
       
