--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -99,16 +99,18 @@ header
       height: 900px  
       @include flex
       flex-direction: column
-      padding-left: 12.5%
-      padding-right: 12.5%
-      h3
+      padding-left: 10%
+      padding-right: 10%
+      margin-left: -22%
+      h2
         color: white  
       p
         color: white
+        font-size: 20px
       #pItalicsec1
         font-style: italic
       #p1sec1
-        margin-left: -40px
+        margin-left: -30px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -116,7 +118,7 @@ header
           font-size: 14px
           padding: 5px 
       #p2sec1
-        margin-left: -57px
+        margin-left: -50px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -131,8 +133,31 @@ header
           font-size: 14px
           padding: 5px    
     .section1Img
-      width: 50%
-      height: 900px
+      margin-left: 100px
+      width: 35%
+      height: 50vh
+      background-image: url('../assets/img/about.jpg')
+      background-size: cover
+      margin-top: -100px
+      border: solid 3px rgb(61, 65, 68)
+      .corner-border
+        border-top: solid 5px rgb(205, 164, 93)
+        margin-top: 3%
+        margin-left: 3%
+        width: 10%
+        height: 13%
+        border-left: solid 5px rgb(205, 164, 93)
+      .corner-border1
+        position: relative
+        top: 285px
+        left: 575px
+        border-bottom: solid 5px rgb(205, 164, 93)
+        margin-bottom: 30px !important
+        margin-right: 30px !important
+        width: 10%
+        height: 13%
+        border-right: solid 5px rgb(205, 164, 93)
+        
         
 
       
