--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22449,20 +22449,22 @@ header .secHeader #div2Header .fa-solid {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-left: 12.5%;
-  padding-right: 12.5%;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-left: -22%;
 }
-.section1 .GrandeDiv1 .section1Text h3 {
+.section1 .GrandeDiv1 .section1Text h2 {
   color: white;
 }
 .section1 .GrandeDiv1 .section1Text p {
   color: white;
+  font-size: 20px;
 }
 .section1 .GrandeDiv1 .section1Text #pItalicsec1 {
   font-style: italic;
 }
 .section1 .GrandeDiv1 .section1Text #p1sec1 {
-  margin-left: -40px;
+  margin-left: -30px;
 }
 .section1 .GrandeDiv1 .section1Text #p1sec1 .fa-check {
   color: rgb(229, 184, 105);
@@ -22472,7 +22474,7 @@ header .secHeader #div2Header .fa-solid {
   padding: 5px;
 }
 .section1 .GrandeDiv1 .section1Text #p2sec1 {
-  margin-left: -57px;
+  margin-left: -50px;
 }
 .section1 .GrandeDiv1 .section1Text #p2sec1 .fa-check {
   color: rgb(229, 184, 105);
@@ -22489,8 +22491,32 @@ header .secHeader #div2Header .fa-solid {
   padding: 5px;
 }
 .section1 .GrandeDiv1 .section1Img {
-  width: 50%;
-  height: 900px;
+  margin-left: 100px;
+  width: 35%;
+  height: 50vh;
+  background-image: url("../assets/img/about.jpg");
+  background-size: cover;
+  margin-top: -100px;
+  border: solid 3px rgb(61, 65, 68);
+}
+.section1 .GrandeDiv1 .section1Img .corner-border {
+  border-top: solid 5px rgb(205, 164, 93);
+  margin-top: 3%;
+  margin-left: 3%;
+  width: 10%;
+  height: 13%;
+  border-left: solid 5px rgb(205, 164, 93);
+}
+.section1 .GrandeDiv1 .section1Img .corner-border1 {
+  position: relative;
+  top: 285px;
+  left: 575px;
+  border-bottom: solid 5px rgb(205, 164, 93);
+  margin-bottom: 30px !important;
+  margin-right: 30px !important;
+  width: 10%;
+  height: 13%;
+  border-right: solid 5px rgb(205, 164, 93);
 }
 
 /*# sourceMappingURL=style.css.map */
