--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22421,7 +22421,7 @@ header .secHeader #div2Header .fa-solid {
 
 .section1 {
   position: relative;
-  height: 900px;
+  height: 850px;
   background-image: url(../assets/img/about-bg.jpg);
   background-attachment: fixed;
 }
@@ -22444,27 +22444,29 @@ header .secHeader #div2Header .fa-solid {
 }
 .section1 .GrandeDiv1 .section1Text {
   width: 50%;
-  height: 900px;
+  height: 850px;
+  letter-spacing: 1px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-left: 10%;
-  padding-right: 10%;
-  margin-left: -22%;
+  padding-left: 6%;
+  padding-right: 3.8%;
+  margin-left: -10%;
 }
 .section1 .GrandeDiv1 .section1Text h2 {
   color: white;
+  font-size: 40px;
 }
 .section1 .GrandeDiv1 .section1Text p {
   color: white;
-  font-size: 20px;
+  font-size: 25px;
 }
 .section1 .GrandeDiv1 .section1Text #pItalicsec1 {
   font-style: italic;
 }
 .section1 .GrandeDiv1 .section1Text #p1sec1 {
-  margin-left: -30px;
+  margin-left: -12px;
 }
 .section1 .GrandeDiv1 .section1Text #p1sec1 .fa-check {
   color: rgb(229, 184, 105);
@@ -22474,7 +22476,7 @@ header .secHeader #div2Header .fa-solid {
   padding: 5px;
 }
 .section1 .GrandeDiv1 .section1Text #p2sec1 {
-  margin-left: -50px;
+  margin-left: -36px;
 }
 .section1 .GrandeDiv1 .section1Text #p2sec1 .fa-check {
   color: rgb(229, 184, 105);
@@ -22496,7 +22498,7 @@ header .secHeader #div2Header .fa-solid {
   height: 50vh;
   background-image: url("../assets/img/about.jpg");
   background-size: cover;
-  margin-top: -100px;
+  margin-top: -220px;
   border: solid 3px rgb(61, 65, 68);
 }
 .section1 .GrandeDiv1 .section1Img .corner-border {
