--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -78,7 +78,7 @@ header
 
 .section1
   position: relative
-  height: 900px
+  height: 850px
   background-image: url(../assets/img/about-bg.jpg)
   background-attachment: fixed
   &::before
@@ -96,21 +96,23 @@ header
     position: relative
     .section1Text
       width: 50%
-      height: 900px  
+      height: 850px  
+      letter-spacing: 1px
       @include flex
       flex-direction: column
-      padding-left: 10%
-      padding-right: 10%
-      margin-left: -22%
+      padding-left: 6%
+      padding-right: 3.8%
+      margin-left: -10%
       h2
         color: white  
+        font-size: 40px
       p
         color: white
-        font-size: 20px
+        font-size: 25px
       #pItalicsec1
         font-style: italic
       #p1sec1
-        margin-left: -30px
+        margin-left: -12px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -118,7 +120,7 @@ header
           font-size: 14px
           padding: 5px 
       #p2sec1
-        margin-left: -50px
+        margin-left: -36px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -138,7 +140,7 @@ header
       height: 50vh
       background-image: url('../assets/img/about.jpg')
       background-size: cover
-      margin-top: -100px
+      margin-top: -220px
       border: solid 3px rgb(61, 65, 68)
       .corner-border
         border-top: solid 5px rgb(205, 164, 93)
