--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -78,7 +78,7 @@ header
 
 .section1
   position: relative
-  height: 850px
+  height: 900px
   background-image: url(../assets/img/about-bg.jpg)
   background-attachment: fixed
   &::before
@@ -96,7 +96,7 @@ header
     position: relative
     .section1Text
       width: 50%
-      height: 850px  
+      height: 900px  
       letter-spacing: 1px
       @include flex
       flex-direction: column
@@ -161,7 +161,47 @@ header
         border-right: solid 5px rgb(205, 164, 93)
         
         
-
+.section2
+  background-color: rgb(13, 11, 9)
+  height: 700px
+  padding-left: 6%
+  .section2Titre
+    height: 25%
+    display: flex
+    gap: 2%
+    padding-top: 3%
+    .texteSection2
+      color: rgb(141, 140, 140)
+      display: inline
+      font-size: 25px
+    hr
+      color: rgb(172, 162, 162)
+      width: 5%
+      opacity: 60%
+  .titreSection2
+    font-size: 50px
+    color: rgb(205, 164, 93)
+    margin-top: -50px
+  #CarteSection2
+    height: 65%
+    display: flex
+    gap: 3%
+    margin-top: 20px
+    #carte1Section2
+      width: 30%
+      height: 100%
+      @include flex
+    #carte2Section2
+      width: 30%
+      height: 105%
+      @include flex
+    #carte3Section2
+      width: 30%
+      height: 100%
+      @include flex
+    #p1Section2
+      font-size: 40px
+      color: rgb(205, 164, 93)
       
         
 
