--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -165,6 +165,7 @@ header
   background-color: rgb(13, 11, 9)
   height: 700px
   padding-left: 6%
+  padding-right: 6%
   .section2Titre
     height: 25%
     display: flex
@@ -179,29 +180,53 @@ header
       width: 5%
       opacity: 60%
   .titreSection2
-    font-size: 50px
+    font-size: 60px
     color: rgb(205, 164, 93)
-    margin-top: -50px
+    margin-top: -80px
   #CarteSection2
     height: 65%
     display: flex
-    gap: 3%
+    justify-content: space-between
     margin-top: 20px
+    padding-bottom: 5%
     #carte1Section2
       width: 30%
-      height: 100%
-      @include flex
+      height: 420px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
     #carte2Section2
       width: 30%
-      height: 105%
-      @include flex
+      height: 450px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
     #carte3Section2
       width: 30%
-      height: 100%
-      @include flex
+      height: 420px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
     #p1Section2
       font-size: 40px
       color: rgb(205, 164, 93)
+      text-align: start
+    #p2Section2
+      font-size: 37.5px
+      color: white
+    #p3Section2
+      color: white
+      font-size: 29.5px
+      font-weight: 100
       
         
 
