--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22540,7 +22540,7 @@ header .secHeader #div2Header .fa-solid {
 }
 .section2 .section2Titre hr {
   color: rgb(172, 162, 162);
-  width: 5%;
+  width: 7.5%;
   opacity: 60%;
 }
 .section2 .titreSection2 {
@@ -22598,6 +22598,29 @@ header .secHeader #div2Header .fa-solid {
   color: white;
   font-size: 29.5px;
   font-weight: 100;
+}
+
+.section3 {
+  height: 900px;
+  background-color: rgb(26, 24, 20);
+  padding-left: 6%;
+  padding-right: 6%;
+}
+.section3 .div1Section3 {
+  height: 25%;
+  display: flex;
+  gap: 2%;
+  padding-top: 3%;
+}
+.section3 .div1Section3 .texteSection3 {
+  color: rgb(141, 140, 140);
+  display: inline;
+  font-size: 25px;
+}
+.section3 .div1Section3 hr {
+  color: rgb(172, 162, 162);
+  width: 7.5%;
+  opacity: 60%;
 }
 
 /*# sourceMappingURL=style.css.map */
