--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -177,7 +177,7 @@ header
       font-size: 25px
     hr
       color: rgb(172, 162, 162)
-      width: 5%
+      width: 7.5%
       opacity: 60%
   .titreSection2
     font-size: 60px
@@ -229,6 +229,23 @@ header
       font-weight: 100
       
         
+.section3
+  height: 900px
+  background-color: rgb(26, 24, 20)
+  padding-left: 6%
+  padding-right: 6%
+  .div1Section3
+    height: 25%
+    display: flex
+    gap: 2%
+    padding-top: 3%
+    .texteSection3
+      color: rgb(141, 140, 140)
+      display: inline
+      font-size: 25px
+    hr
+      color: rgb(172, 162, 162)
+      width: 7.5%
+      opacity: 60%
 
-        
         
