--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -21,6 +21,8 @@ header
   position: relative
   height: 1000px
   background-image: url(../assets/img/hero-bg.jpg)
+  background-position: 100% 75% 
+  background-size: 100%
   background-attachment: fixed
   &::before
     content: ''
@@ -29,7 +31,7 @@ header
     left: 0
     width: 100%
     height: 100%
-    background-color: rgba(0, 0, 0, 0.356)
+    background-color: rgba(0, 0, 0, 0.726)
     z-index: 0
   .secHeader
     padding-top: 25%
@@ -88,7 +90,7 @@ header
     left: 0
     width: 100%
     height: 100%
-    background-color: rgba(0, 0, 0, 0.356)
+    background-color: rgba(0, 0, 0, 0.61)
     z-index: 0
   .GrandeDiv1
     @include flex
@@ -249,3 +251,18 @@ header
       opacity: 60%
 
         
+.section4
+  position: relative
+  height: 900px
+  background-image: url(../assets/img/events-bg.jpg)
+  background-attachment: fixed
+  background-position: 100% 50%
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.74)
+    z-index: 0
