premiere photo section event

--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -4,7 +4,6 @@ body
 .navbar
   background-color: rgba(33, 37, 41, 0.5) !important
   
-  // Reset l'opacité pour tous les éléments enfants
   .navbar-brand, .navbarText a, .navbarText1
     opacity: 1 !important
     color: #ffffff !important
@@ -76,7 +75,24 @@ header
           font-size: 30px
           box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336)
           
+#video-toggle
+  display: none
 
+#video-container
+  display: none
+  margin-top: 20px
+  width: 100%
+
+#video-toggle:checked + #video-container
+  display: block
+
+iframe
+  width: 100%
+  max-width: 600px
+  height: 315px
+
+.fa-play
+  cursor: pointer
 
 .section1
   position: relative
@@ -266,23 +282,51 @@ header
     height: 100%
     background-color: rgba(0, 0, 0, 0.74)
     z-index: 0
-  div
+  #divEvent
     height: 25%
     z-index: 1
     position: relative
-    p
+    display: flex
+    flex-direction: column
+    #titreSection4
       color: white
-  div
+      font-weight: 500
+      font-size: 25px
+      margin-left: 6%
+      margin-bottom: 0
+    #textSection4
+      color: rgb(205, 164, 93)
+      margin-left: 6%
+      margin-top: -2%
+      font-size: 60px
+      font-weight: 400
+  .card
     display: flex
     width: auto
     height: 300px
-    justify-content: center
+    justify-content: start
+    div
+      margin-left: -1%
+      justify-content: center
+      display: flex
     .card-body
       flex-direction: column
       color: BLACK
-      padding-left: 5%
-      padding-right: 5%
+      padding-left: 17.5%
+      margin-left: -7.5%
+      padding-right: 17.5%
+      margin-top: -2.5%
+      line-height: 35px
       .card-title
         color: rgb(205, 164, 93)
+        font-size: 45px
+        margin-bottom: 5.5%
       .card-price
-        font-size: 30px
+        font-size: 35px
+        color: white
+        text-decoration: underline
+        text-decoration-color: rgb(205, 164, 93)
+        margin-bottom: 5.5%
+      p
+        color: white
+        font-size: 25px
