--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22421,6 +22421,30 @@ header .secHeader #div2Header .fa-solid {
   box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336);
 }
 
+#video-toggle {
+  display: none;
+}
+
+#video-container {
+  display: none;
+  margin-top: 20px;
+  width: 100%;
+}
+
+#video-toggle:checked + #video-container {
+  display: block;
+}
+
+iframe {
+  width: 100%;
+  max-width: 600px;
+  height: 315px;
+}
+
+.fa-play {
+  cursor: pointer;
+}
+
 .section1 {
   position: relative;
   height: 900px;
@@ -22642,31 +22666,62 @@ header .secHeader #div2Header .fa-solid {
   background-color: rgba(0, 0, 0, 0.74);
   z-index: 0;
 }
-.section4 div {
+.section4 #divEvent {
   height: 25%;
   z-index: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
-.section4 div p {
+.section4 #divEvent #titreSection4 {
   color: white;
+  font-weight: 500;
+  font-size: 25px;
+  margin-left: 6%;
+  margin-bottom: 0;
 }
-.section4 div {
+.section4 #divEvent #textSection4 {
+  color: rgb(205, 164, 93);
+  margin-left: 6%;
+  margin-top: -2%;
+  font-size: 60px;
+  font-weight: 400;
+}
+.section4 .card {
   display: flex;
   width: auto;
   height: 300px;
-  justify-content: center;
+  justify-content: start;
 }
-.section4 div .card-body {
+.section4 .card div {
+  margin-left: -1%;
+  justify-content: center;
+  display: flex;
+}
+.section4 .card .card-body {
   flex-direction: column;
   color: BLACK;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 17.5%;
+  margin-left: -7.5%;
+  padding-right: 17.5%;
+  margin-top: -2.5%;
+  line-height: 35px;
 }
-.section4 div .card-body .card-title {
+.section4 .card .card-body .card-title {
   color: rgb(205, 164, 93);
+  font-size: 45px;
+  margin-bottom: 5.5%;
 }
-.section4 div .card-body .card-price {
-  font-size: 30px;
+.section4 .card .card-body .card-price {
+  font-size: 35px;
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: rgb(205, 164, 93);
+  margin-bottom: 5.5%;
+}
+.section4 .card .card-body p {
+  color: white;
+  font-size: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
