--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -269,7 +269,7 @@ iframe
         
 .section4
   position: relative
-  height: 900px
+  height: 1000px
   background-image: url(./../assets/img/events-bg.jpg)
   background-attachment: fixed
   background-position: 100% 50%
@@ -294,12 +294,14 @@ iframe
       font-size: 25px
       margin-left: 6%
       margin-bottom: 0
+      margin-top: 5%
     #textSection4
       color: rgb(205, 164, 93)
       margin-left: 6%
       margin-top: -2%
       font-size: 60px
       font-weight: 400
+      margin-bottom: 5%
   .card
     display: flex
     width: auto
@@ -309,13 +311,12 @@ iframe
       margin-left: -1%
       justify-content: center
       display: flex
+      margin-top: 2.5%
     .card-body
       flex-direction: column
-      color: BLACK
-      padding-left: 17.5%
+      padding-left: 15.5%
       margin-left: -7.5%
-      padding-right: 17.5%
-      margin-top: -2.5%
+      padding-right: 15.5%
       line-height: 35px
       .card-title
         color: rgb(205, 164, 93)
