--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -54,9 +54,10 @@ header
       #p1Header
         color: white
         align-self: flex-start
-        font-size: 22px
+        font-size: 27.5px
         letter-spacing: 0.5px
         margin-top: 0
+        margin-bottom: 5%
       #span1Header
         display: flex
         gap: 3%
@@ -234,6 +235,8 @@ iframe
       padding-left: 2.5%
       padding-right: 2.5%
       background-color: rgb(26, 24, 20)
+    #carte1Section2:hover, #carte2Section2:hover, #carte3Section2:hover
+      background-color: rgb(205, 164, 93)
     #p1Section2
       font-size: 40px
       color: rgb(205, 164, 93)
@@ -245,6 +248,8 @@ iframe
       color: white
       font-size: 29.5px
       font-weight: 100
+    #p1Section2:hover,#p2Section2:hover,#p3Section2:hover
+      color: rgb(26, 24, 20)
       
         
 .section3
@@ -266,7 +271,7 @@ iframe
       width: 7.5%
       opacity: 60%
 
-        
+
 .section4
   position: relative
   height: 1000px
@@ -318,6 +323,7 @@ iframe
       margin-left: -7.5%
       padding-right: 15.5%
       line-height: 35px
+      margin-top: -2.5%
       .card-title
         color: rgb(205, 164, 93)
         font-size: 45px
@@ -331,3 +337,10 @@ iframe
       p
         color: white
         font-size: 25px
+
+
+.section5
+  height: auto
+  background-color: rgb(13, 11, 9)
+  #divReservation
+    padding-top: 5%
