--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -342,5 +342,25 @@ iframe
 .section5
   height: auto
   background-color: rgb(13, 11, 9)
-  #divReservation
-    padding-top: 5%
+  padding-left: 6%
+  #grandDiv5
+    display: flex
+    flex-direction: column
+    #divReservation
+      padding-top: 5%
+      height: 25%
+      display: flex
+      gap: 2.5%
+      #p1Reservation
+        color: white
+        display: inline
+        font-size: 25px
+      hr 
+        color: white
+        width: 7.5%
+        opacity: 25%
+    #p2Reservation
+      color: rgb(205, 164, 93) !important
+      font-size: 60px !important
+  #FormReserv
+    width: 100%
