fin section5 forum

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22737,6 +22737,8 @@ iframe {
   height: auto;
   background-color: rgb(13, 11, 9);
   padding-left: 6%;
+  padding-right: 6%;
+  padding-bottom: 10%;
 }
 .section5 #grandDiv5 {
   display: flex;
@@ -22761,9 +22763,53 @@ iframe {
 .section5 #grandDiv5 #p2Reservation {
   color: rgb(205, 164, 93) !important;
   font-size: 60px !important;
+  margin-bottom: 5%;
 }
 .section5 #FormReserv {
   width: 100%;
+}
+.section5 #FormReserv #booking-form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.section5 #FormReserv #booking-form div {
+  background-color: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  gap: 5%;
+}
+.section5 #FormReserv #booking-form div #firstName, .section5 #FormReserv #booking-form div #lastName, .section5 #FormReserv #booking-form div #Date, .section5 #FormReserv #booking-form div #phone, .section5 #FormReserv #booking-form div #time, .section5 #FormReserv #booking-form div #people {
+  width: 500px !important;
+  height: 75px !important;
+  border: 1px grey solid;
+  background-color: rgb(13, 11, 9);
+  color: rgb(146, 139, 122);
+  font-size: 20px;
+}
+.section5 #FormReserv #booking-form div #MessageForm {
+  margin-top: 10%;
+  width: 1700px;
+  height: 220px;
+  border: 2px grey solid;
+  background-color: rgb(13, 11, 9);
+  color: rgb(146, 139, 122);
+  font-size: 20px;
+}
+.section5 #FormReserv #booking-form #btnForm {
+  border-radius: 50px;
+  padding: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: rgb(205, 164, 93);
+  border: 1px orange solid;
+  margin-top: 20%;
+  width: 200px;
+  font-size: 20px;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
