--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -343,6 +343,8 @@ iframe
   height: auto
   background-color: rgb(13, 11, 9)
   padding-left: 6%
+  padding-right: 6%
+  padding-bottom: 10%
   #grandDiv5
     display: flex
     flex-direction: column
@@ -362,5 +364,46 @@ iframe
     #p2Reservation
       color: rgb(205, 164, 93) !important
       font-size: 60px !important
+      margin-bottom: 5%
   #FormReserv
     width: 100%
+    #booking-form
+      display: flex
+      align-items: center
+      flex-direction: column
+      div
+        background-color: none
+        width: 100%
+        display: flex
+        justify-content: center
+        align-items: center
+        height: 100px
+        gap: 5%
+        #firstName, #lastName, #Date, #phone, #time, #people
+          width: 500px !important
+          height: 75px !important
+          border: 1px grey solid
+          background-color: rgb(13, 11, 9)
+          color: rgb(146, 139, 122)
+          font-size: 20px
+        #MessageForm
+          margin-top: 10%
+          width: 1700px
+          height: 220px
+          border: 2px grey solid
+          background-color: rgb(13, 11, 9)
+          color: rgb(146, 139, 122)
+          font-size: 20px
+      #btnForm
+        border-radius: 50px
+        padding: 10px
+        padding-left: 25px
+        padding-right: 25px
+        background: rgb(205, 164, 93)
+        border: 1px orange solid
+        margin-top: 20%
+        width: 200px
+        font-size: 20px
+        color: white
+      
+
