--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -75,22 +75,31 @@ header
           padding: 35px
           font-size: 30px
           box-shadow: 0px 0px 0px 10px rgba(204, 164, 94, 0.336)
-          
-#video-toggle
-  display: none
+    #video-toggle
+      display: none
+    dialog#videoPopup
+      padding: 0
+      border: none
+      border-radius: 8px
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4)
+      max-width: 80vw
+      background-color: transparent
+      z-index: 100
+      .close-button
+        position: absolute
+        top: -18px
+        right: -18px
+        width: 36px
+        height: 36px
+        border-radius: 50%
+        background-color: rgb(204, 163, 94)
+        border: none
+        cursor: pointer
+        display: flex
+        align-items: center
+        justify-content: center
+        box-shadow: 0px 0px 0px 5px rgba(204, 164, 94, 0.336)
 
-#video-container
-  display: none
-  margin-top: 20px
-  width: 100%
-
-#video-toggle:checked + #video-container
-  display: block
-
-iframe
-  width: 100%
-  max-width: 600px
-  height: 315px
 
 .fa-play
   cursor: pointer
@@ -241,6 +250,8 @@ iframe
       font-size: 40px
       color: rgb(205, 164, 93)
       text-align: start
+    #p1Section2:hover
+      color: white
     #p2Section2
       font-size: 37.5px
       color: white
@@ -248,8 +259,6 @@ iframe
       color: white
       font-size: 29.5px
       font-weight: 100
-    #p1Section2:hover,#p2Section2:hover,#p3Section2:hover
-      color: rgb(26, 24, 20)
       
         
 .section3
