--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22424,29 +22424,31 @@ header .secHeader #div2Header .fa-solid {
 header .secHeader #video-toggle {
   display: none;
 }
-header .secHeader dialog#videoPopup {
+
+dialog#videoPopup {
   padding: 0;
-  border: none;
+  border: solid 3px;
   border-radius: 8px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-  max-width: 80vw;
-  background-color: transparent;
+  max-width: 60vw;
+  background-color: none;
   z-index: 100;
 }
-header .secHeader dialog#videoPopup .close-button {
+
+.close-button {
   position: absolute;
-  top: -18px;
-  right: -18px;
+  top: 0px;
+  right: 0px;
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  background-color: rgb(204, 163, 94);
+  background-color: none;
   border: none;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 0px 5px rgba(204, 164, 94, 0.336);
+  z-index: 101;
 }
 
 .fa-play {
