--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -80,14 +80,14 @@ header
     
 
 
-dialog#videoPopup
-      padding: 0
-      border: solid 3px
-      border-radius: 8px
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4)
-      max-width: 60vw
-      background-color: none
-      z-index: 100
+#videoPopup
+  padding: 0
+  border: solid 3px
+  border-radius: 8px
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4)
+  max-width: 60vw
+  background-color: none
+  z-index: 100
 .close-button
         position: absolute
         top: 0px
