--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -18,7 +18,8 @@ body
     font-size: 30px
 header
   position: relative
-  height: 1000px
+  height: auto
+  padding-bottom: 22.5%
   background-image: url(../assets/img/hero-bg.jpg)
   background-position: 100% 75% 
   background-size: 100%
@@ -110,7 +111,7 @@ header
 
 .section1
   position: relative
-  height: 900px
+  height: auto
   background-image: url(../assets/img/about-bg.jpg)
   background-attachment: fixed
   &::before
@@ -126,9 +127,11 @@ header
     @include flex
     z-index: 1
     position: relative
+    padding-top: 5%
+    padding-bottom: 5%
     .section1Text
       width: 50%
-      height: 900px  
+      height: auto
       letter-spacing: 1px
       @include flex
       flex-direction: column
@@ -195,7 +198,7 @@ header
         
 .section2
   background-color: rgb(13, 11, 9)
-  height: 700px
+  height: auto
   padding-left: 6%
   padding-right: 6%
   .section2Titre
@@ -205,7 +208,6 @@ header
     padding-top: 3%
     .texteSection2
       color: rgb(141, 140, 140)
-      display: inline
       font-size: 25px
     hr
       color: rgb(172, 162, 162)
@@ -214,9 +216,9 @@ header
   .titreSection2
     font-size: 60px
     color: rgb(205, 164, 93)
-    margin-top: -80px
+    margin-bottom: 60px
   #CarteSection2
-    height: 65%
+    height: auto
     display: flex
     justify-content: space-between
     margin-top: 20px
@@ -419,4 +421,17 @@ header
         font-size: 20px
         color: white
       
-
+.section6
+  height: auto
+  background-color: rgb(13, 11, 9)
+  padding-left: 6%
+  padding-right: 6%
+  padding-bottom: 10%
+  #p1Section6
+    color: white
+    font-size: 25px
+  hr 
+    color: white
+    width: 7.5%
+    opacity: 25%
+    margin-left: 2.5%
