ajout photo section 6

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22826,19 +22826,44 @@ header .secHeader #video-toggle {
 .section6 {
   height: auto;
   background-color: rgb(13, 11, 9);
-  padding-left: 6%;
-  padding-right: 6%;
-  padding-bottom: 10%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-bottom: 5%;
 }
 .section6 #p1Section6 {
   color: white;
   font-size: 25px;
+  padding-left: 3%;
 }
 .section6 hr {
   color: white;
   width: 7.5%;
   opacity: 25%;
   margin-left: 2.5%;
+}
+.section6 #p2Section6 {
+  color: rgb(205, 164, 93) !important;
+  font-size: 60px !important;
+  margin-bottom: 5%;
+  padding-left: 3%;
+}
+.section6 #divImg {
+  width: 100%;
+  height: 620px;
+}
+.section6 #divImg #div1Img {
+  height: 50%;
+}
+.section6 #divImg #div1Img #imgGallery {
+  width: 24%;
+  height: 100%;
+}
+.section6 #divImg #div2Img {
+  height: 50%;
+}
+.section6 #divImg #div2Img #imgGallery {
+  width: 24%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
