--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -424,14 +424,33 @@ header
 .section6
   height: auto
   background-color: rgb(13, 11, 9)
-  padding-left: 6%
-  padding-right: 6%
-  padding-bottom: 10%
+  padding-left: 3%
+  padding-right: 3%
+  padding-bottom: 5%
   #p1Section6
     color: white
     font-size: 25px
+    padding-left: 3%
   hr 
     color: white
     width: 7.5%
     opacity: 25%
     margin-left: 2.5%
+  #p2Section6 
+    color: rgb(205, 164, 93) !important
+    font-size: 60px !important
+    margin-bottom: 5%
+    padding-left: 3%
+  #divImg
+    width: 100%
+    height: 620px
+    #div1Img
+      height: 50%
+      #imgGallery
+        width: 24%
+        height: 100%
+    #div2Img
+      height: 50%
+      #imgGallery
+        width: 24%
+        height: 100%
