--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -446,11 +446,20 @@ header
     height: 620px
     #div1Img
       height: 50%
+      transition: transform 0.3s ease
       #imgGallery
         width: 24%
         height: 100%
+        transition: transform 0.3s ease
+      #imgGallery:hover
+        transform: scale(1.05) !important
     #div2Img
       height: 50%
+      transition: transform 0.3s ease
       #imgGallery
         width: 24%
         height: 100%
+        transition: transform 0.3s ease
+      #imgGallery:hover
+        transform: scale(1.05) !important
+        
