--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -194,8 +194,7 @@ header
         width: 10%
         height: 13%
         border-right: solid 5px rgb(205, 164, 93)
-        
-        
+               
 .section2
   background-color: rgb(13, 11, 9)
   height: auto
@@ -265,8 +264,7 @@ header
       color: white
       font-size: 29.5px
       font-weight: 100
-      
-        
+              
 .section3
   height: 900px
   background-color: rgb(26, 24, 20)
@@ -285,7 +283,6 @@ header
       color: rgb(172, 162, 162)
       width: 7.5%
       opacity: 60%
-
 
 .section4
   position: relative
@@ -352,7 +349,6 @@ header
       p
         color: white
         font-size: 25px
-
 
 .section5
   height: auto
@@ -444,6 +440,7 @@ header
   #divImg
     width: 100%
     height: 620px
+    margin-left: 1.5%
     #div1Img
       height: 50%
       transition: transform 0.3s ease
@@ -463,3 +460,38 @@ header
       #imgGallery:hover
         transform: scale(1.05) !important
         
+.section7
+  height: auto
+  background-color: rgb(13, 11, 9)
+  padding-left: 6%
+  padding-right: 6%
+  padding-bottom: 10%
+  .divSection7
+    display: flex
+    flex-direction: column
+    .TextSection7
+      display: flex
+      .p1Section7
+        color: white
+        font-size: 25px
+        padding-left: 0.5%
+      hr 
+        color: white
+        width: 7.5%
+        opacity: 25%
+        margin-left: 2.75%
+    .p2Section7
+      color: rgb(205, 164, 93)
+      font-size: 55px
+  .ImgSection7
+    width: 97.5%
+    height: 475px
+    margin-bottom: 0
+    display: flex
+    justify-content: center
+    gap: 3%
+    margin-top: 2.5%
+    #imgS7
+      width: 30%
+      height: 100%
+      
