--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22908,7 +22908,7 @@ header .secHeader #video-toggle {
 }
 .section7 .ImgSection7 {
   width: 97.5%;
-  height: 475px;
+  height: auto;
   margin-bottom: 0;
   display: flex;
   justify-content: center;
@@ -22918,6 +22918,24 @@ header .secHeader #video-toggle {
 .section7 .ImgSection7 #imgS7 {
   width: 30%;
   height: 100%;
+}
+
+.section8 {
+  height: auto;
+  background-color: rgb(13, 11, 9);
+  padding-left: 7%;
+  padding-right: 6%;
+  padding-bottom: 10%;
+}
+.section8 hr {
+  color: white;
+  width: 7.5%;
+  opacity: 25%;
+  margin-left: 2.75%;
+}
+.section8 #p2section8 {
+  color: rgb(205, 164, 93);
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
