--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22366,7 +22366,7 @@ header::before {
   z-index: 0;
 }
 header .secHeader {
-  padding-top: 25%;
+  padding-top: 22.5%;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -22862,7 +22862,7 @@ header .secHeader #video-toggle {
   transition: transform 0.3s ease;
 }
 .section6 #divImg #div1Img #imgGallery:hover {
-  transform: scale(1.05) !important;
+  transform: scale(1.03) !important;
 }
 .section6 #divImg #div2Img {
   height: 50%;
@@ -22874,7 +22874,7 @@ header .secHeader #video-toggle {
   transition: transform 0.3s ease;
 }
 .section6 #divImg #div2Img #imgGallery:hover {
-  transform: scale(1.05) !important;
+  transform: scale(1.03) !important;
 }
 
 .section7 {
@@ -22923,8 +22923,6 @@ header .secHeader #video-toggle {
 .section8 {
   height: auto;
   background-color: rgb(13, 11, 9);
-  padding-left: 7%;
-  padding-right: 6%;
   padding-bottom: 10%;
 }
 .section8 hr {
@@ -22936,6 +22934,122 @@ header .secHeader #video-toggle {
 .section8 #p2section8 {
   color: rgb(205, 164, 93);
   font-weight: 400;
+  padding-left: 6.25%;
+  padding-right: 6%;
+  margin-bottom: 3%;
+}
+.section8 .divGoogleMap {
+  flex-direction: column;
+  display: flex;
+}
+.section8 .divGoogleMap #google {
+  width: 100%;
+  height: 475px;
+}
+.section8 .divGoogleMap #google iframe {
+  width: 100%;
+  height: 475px;
+}
+.section8 .divGoogleMap .formSection8 {
+  display: flex;
+  width: 100%;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 ul {
+  margin-top: 10%;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 ul li {
+  margin-top: 5%;
+  margin-bottom: 15%;
+  list-style-type: none;
+  padding-right: 15%;
+  color: white;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 ul li .fa-regular {
+  margin-right: 10%;
+  color: white;
+  padding: 16.5px;
+  border: 1px solid;
+  border-color: rgb(205, 164, 93);
+  border-radius: 50%;
+  background-color: rgb(205, 164, 93);
+  margin-top: 5%;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 ul li .fa-solid {
+  margin-right: 10%;
+  color: white;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  padding: 16.5px;
+  border: 1px solid;
+  border-color: rgb(205, 164, 93);
+  border-radius: 50%;
+  background-color: rgb(205, 164, 93);
+  margin-top: 5%;
+}
+.section8 .divGoogleMap .formSection8 .UlSection8 ul li p {
+  margin: 0;
+  color: rgba(255, 255, 255, 0.8);
+  line-height: 1.6;
+  margin-left: 35%;
+}
+.section8 .divGoogleMap .contact-form {
+  width: 73%;
+  flex-direction: column;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section8 .divGoogleMap .contact-form .form-row {
+  margin-top: 5%;
+  display: flex;
+  gap: 5%;
+}
+.section8 .divGoogleMap .contact-form .form-row #text, .section8 .divGoogleMap .contact-form .form-row #email {
+  width: 500px !important;
+  height: 75px !important;
+  border: 1px rgb(59, 55, 45) solid;
+  background-color: rgb(13, 11, 9);
+  color: rgb(146, 139, 122);
+  font-size: 20px;
+}
+.section8 .divGoogleMap .contact-form #subject {
+  margin-top: 5%;
+  width: 1000px !important;
+  height: 75px !important;
+  border: 1px rgb(59, 55, 45) solid;
+  background-color: rgb(13, 11, 9);
+  color: rgb(146, 139, 122);
+  font-size: 20px;
+}
+.section8 .divGoogleMap .contact-form #msg {
+  margin-top: 5%;
+  width: 1000px !important;
+  height: 300px !important;
+  border: 1px rgb(59, 55, 45) solid;
+  background-color: rgb(13, 11, 9);
+  color: rgb(146, 139, 122);
+  font-size: 20px;
+}
+.section8 .divGoogleMap .contact-form #buttonForm {
+  border-radius: 50px;
+  padding: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: rgb(205, 164, 93);
+  border: 1px orange solid;
+  width: 200px;
+  font-size: 20px;
+  color: white;
+  margin-left: 40%;
+  margin-top: 2.5%;
 }
 
 /*# sourceMappingURL=style.css.map */
