--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -1,4 +1,5 @@
 @use './_mixins' as *
+@use './_variables' as *
 body
     margin-top: 0
 .navbar
@@ -34,7 +35,7 @@ header
     background-color: rgba(0, 0, 0, 0.726)
     z-index: 0
   .secHeader
-    padding-top: 25%
+    padding-top: 22.5%
     display: flex
     justify-content: center
     width: 100%
@@ -449,7 +450,7 @@ header
         height: 100%
         transition: transform 0.3s ease
       #imgGallery:hover
-        transform: scale(1.05) !important
+        transform: scale(1.03) !important
     #div2Img
       height: 50%
       transition: transform 0.3s ease
@@ -458,7 +459,7 @@ header
         height: 100%
         transition: transform 0.3s ease
       #imgGallery:hover
-        transform: scale(1.05) !important
+        transform: scale(1.03) !important
         
 .section7
   height: auto
@@ -498,8 +499,6 @@ header
 .section8   
   height: auto
   background-color: rgb(13, 11, 9)
-  padding-left: 7%
-  padding-right: 6%
   padding-bottom: 10%
   hr
     color: white 
@@ -509,3 +508,100 @@ header
   #p2section8
       color: rgb(205, 164, 93)
       font-weight: 400
+      padding-left: 6.25%
+      padding-right: 6%
+      margin-bottom: 3%
+  .divGoogleMap
+    flex-direction: column
+    display: flex
+    #google
+      width: 100%
+      height: 475px
+      iframe
+        width: 100%
+        height: 475px
+    .formSection8
+      display: flex
+      width: 100%
+      .UlSection8
+        flex-direction: column
+        @include flex
+        width: 25%
+        ul
+          margin-top: 10%
+          li
+            margin-top: 5%
+            margin-bottom: 15%
+            list-style-type: none
+            padding-right: 15%
+            color: white
+            .fa-regular
+              margin-right: 10%
+              color: white
+              padding: 16.5px
+              border: 1px solid 
+              border-color: rgb(205, 164, 93)
+              border-radius: 50%
+              background-color: rgb(205, 164, 93)
+              margin-top: 5%
+            .fa-solid
+              margin-right: 10%
+              color: white
+              padding-left: 20px !important
+              padding-right: 20px !important
+              padding: 16.5px
+              border: 1px solid 
+              border-color: rgb(205, 164, 93)
+              border-radius: 50%
+              background-color: rgb(205, 164, 93)
+              margin-top: 5%
+            p
+              margin: 0;
+              color: rgba(255, 255, 255, 0.8);
+              line-height: 1.6;
+              margin-left: 35%
+    .contact-form
+      width: 73%
+      flex-direction: column
+      height: auto
+      @include flex
+      .form-row
+        margin-top: 5%
+        display: flex
+        gap: 5%
+        #text, #email
+          width: 500px !important
+          height: 75px !important
+          border: 1px $gris solid
+          background-color: rgb(13, 11, 9)
+          color: rgb(146, 139, 122)
+          font-size: 20px
+      #subject
+          margin-top: 5%
+          width: 1000px !important
+          height: 75px !important
+          border: 1px $gris solid
+          background-color: rgb(13, 11, 9)
+          color: rgb(146, 139, 122)
+          font-size: 20px
+      #msg
+        margin-top: 5%
+        width: 1000px !important
+        height: 300px !important
+        border: 1px $gris solid
+        background-color: rgb(13, 11, 9)
+        color: rgb(146, 139, 122)
+        font-size: 20px
+      #buttonForm
+        border-radius: 50px
+        padding: 10px
+        padding-left: 25px
+        padding-right: 25px
+        background: rgb(205, 164, 93)
+        border: 1px orange solid
+        width: 200px
+        font-size: 20px
+        color: white
+        margin-left: 40%
+        margin-top: 2.5%
+        
