--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -2,6 +2,7 @@
 @use './_variables' as *
 body
     margin-top: 0
+    overflow-x: hidden
 .navbar
   background-color: rgba(33, 37, 41, 0.5) !important
   
@@ -15,6 +16,8 @@ body
     margin-left: -20%
   .navbarText1
     @include boutonheader
+    &:hover
+      background-color: rgb(205, 164, 93)
   .navbar-brand
     font-size: 30px
 header
@@ -66,6 +69,8 @@ header
       #btnHeader
         @include boutonheader
         color: white
+        &:hover
+          background-color: rgb(205, 164, 93)
     #div2Header
         padding-top: 5%
         .fa-solid
@@ -175,6 +180,9 @@ header
       background-size: cover
       margin-top: -220px
       border: solid 3px rgb(61, 65, 68)
+      transition: transform 0.3s ease
+      &:hover
+        transform: scale(1.1)
       .corner-border
         border-top: solid 5px rgb(205, 164, 93)
         margin-top: 3%
@@ -492,6 +500,35 @@ header
     #imgS7
       width: 30%
       height: 100%
+    #img1S7
+      background-image: url('../assets/img/chefs/chefs-1.jpg')
+      width: 30%
+      height: 400px
+      background-size: cover
+      background-position: center
+    #img2S7
+      background-image: url('../assets/img/chefs/chefs-2.jpg')
+      width: 30%
+      height: 400px
+      background-size: cover
+      background-position: center
+    #img3S7
+      background-image: url('../assets/img/chefs/chefs-3.jpg')
+      width: 30%
+      height: 400px
+      background-size: cover
+      background-position: center
+    #textChef1, #textChef2, #textChef3, .fa-brands
+      position: relative
+      transform: translateY(310px)
+      color: white
+    #logo
+      display: flex
+      gap: 5%
+      justify-content: center
+      color: white
+      font-size: 22.5px
+
 
 .section8   
   height: auto
@@ -602,13 +639,10 @@ header
         margin-left: 40%
         margin-top: 2.5%
         
-
 #hrAvantFooter
   color: white
   width: 95%
   margin-top: 5%
-
-
 
 .section9
   @include flex
@@ -705,3 +739,13 @@ header
             font-weight: 600
             transition: background-color 0.3s
             border: none
+
+
+footer
+  background-color: rgb(0, 0, 0)
+  height: 10vh
+  p
+    @include flex
+    color: white
+    padding-top: 2%
+    
