--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -506,21 +506,37 @@ header
       height: 400px
       background-size: cover
       background-position: center
+      #textS7
+        opacity: 0
+        &:hover
+          opacity: 1
+          background: linear-gradient(to top, black 0%, rgba(255, 255, 255, 0.432) 100%)
     #img2S7
       background-image: url('../assets/img/chefs/chefs-2.jpg')
       width: 30%
       height: 400px
       background-size: cover
       background-position: center
+      #textS7
+        opacity: 0
+        &:hover
+          opacity: 1
+          background: linear-gradient(to top, black 0%, rgba(255, 255, 255, 0.432) 100%)
     #img3S7
       background-image: url('../assets/img/chefs/chefs-3.jpg')
       width: 30%
       height: 400px
       background-size: cover
       background-position: center
-    #textChef1, #textChef2, #textChef3, .fa-brands
+      #textS7
+        opacity: 0
+        &:hover
+          opacity: 1
+          background: linear-gradient(to top, black 0%, rgba(255, 255, 255, 0.432) 100%)
+    #textChef1, #textChef2, #textChef3
       position: relative
-      transform: translateY(310px)
+      padding-top: 75%
+      padding-bottom: -100px
       color: white
     #logo
       display: flex
